...
        
        return button
    } ()
    
    private let loginButton: AuthUIBtn = {
        let button = AuthUIBtn(type: .system)
        button.setTitle("Already Have an Account?", for: .normal)
        button.titleLabel?.font=UIFont.systemFont(ofSize: 18, weight: UIFont.Weight.light)
        button.addTarget(self, action: #selector(showLoginPage), for: .touchUpInside)
        
        return button
    }()

...
